AG-40415 New UI for AdGuard Assistant [assistant]
Squashed commit of the following:

commit 01544f1477a6b1e40a7e97bb74984b8ac5078e6e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Sun Jun 29 09:27:53 2025 -0400

    add bg and th, update locales and changelog

commit fdb797d421d07648b58bdfca375ed73e4c4b427b
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 15:15:17 2025 -0400

    update locales

commit b95048fcbc4b570cc695e6a9909f18e6ce458d59
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 15:15:06 2025 -0400

    fix changelog

commit 20a620499168be3c8f755cb16233bfebdc036708
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 15:14:56 2025 -0400

    fix build

commit d6d28495f7063790b770582cfd83e39867ed467f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 15:14:25 2025 -0400

    add ca and mk locales

commit f68277f3b378d03ecff7baa124716192c2b78ba4
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 14:54:37 2025 -0400

    fix node:path

commit f7af94064c21bfa9b324fa0295a5cf1eef92886c
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 14:49:51 2025 -0400

    fix log message

commit 063bef798e1d237b4892bbefb0a3c8540ff67aa9
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 14:47:31 2025 -0400

    update locales

commit e5c3337e7ff6ca9dc315ef3479e9e22367a0c296
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 14:46:58 2025 -0400

    fix linter config

commit 4c3ca1da55920b61ffd458ca05178ac08cdda914
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 14:46:43 2025 -0400

    fix locale scripts

commit 36d169cdea601accb13528843f977391475116fc
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Jun 27 14:31:25 2025 -0400

    add locales validation script

commit 12d460b0315edf0fee3c639a64b7105a59432d98
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Thu Jun 26 16:42:16 2025 +0300

    Applied suggestion

commit 451dbfe89380675a23b1acc0e353

--- a/locales/ar/messages.meta.json
+++ b/locales/ar/messages.meta.json
@@ -1,7 +1,7 @@
 {
     "extension": {
         "assistant": {
-            "name": "AdGuardمساعد",
+            "name": "مساعد AdGuard",
             "description": "يوفر طريقه سهله ومريحه لأداره التصفية الحقيقة من المتصفح"
         }
     }
