--- a/locales/el/messages.json
+++ b/locales/el/messages.json
@@ -29,22 +29,22 @@
         "message": "Επίπεδο εμπιστοσύνης φήμης"
     },
     "assistant_select_element": {
-        "message": "Αποκλεισμός στοιχείου"
+        "message": "Αποκλεισμός ενός στοιχείου"
     },
     "assistant_select_element_ext": {
-        "message": "Επιλέξτε ένα στοιχείο στη σελίδα για αποκλεισμό"
+        "message": "Κάντε κλικ σε ένα στοιχείο που θέλετε να αποκλείσετε. Το AdGuard θα δημιουργήσει έναν κανόνα χρήστη για αυτό"
     },
     "assistant_select_element_cancel": {
         "message": "Άκυρο"
     },
     "assistant_block_element": {
-        "message": "Αποκλεισμός στοιχείου"
+        "message": "Αποκλεισμός ενός στοιχείου"
     },
     "assistant_block_element_explain": {
-        "message": "Προσαρμόστε τον κανόνα αποκλεισμού στοιχείου"
+        "message": "Δημιουργήστε έναν κανόνα αποκλεισμού στοιχείων"
     },
     "assistant_slider_explain": {
-        "message": "Μετακινήστε το ρυθμιστικό για να αλλάξετε το μέγεθος του πλαισίου για τον οποίο θα λειτουργεί ο νέος κανόνας:"
+        "message": "Μετακινήστε το ρυθμιστικό για να ρυθμίσετε το μέγεθος του πλαισίου"
     },
     "assistant_extended_settings": {
         "message": "Προηγμένες ρυθμίσεις"
@@ -71,10 +71,10 @@
         "message": "Ρυθμίσεις βοηθού"
     },
     "assistant_preview_header": {
-        "message": "Αποκλεισμός στοιχείου - προεπισκόπηση"
+        "message": "Προεπισκόπηση αποκλεισμένου στοιχείου"
     },
     "assistant_preview_header_info": {
-        "message": "Βεβαιωθείτε ότι το στοιχείο είναι μπλοκαρισμένο όπως προορίζεται"
+        "message": "Ελέγξτε αν το στοιχείο έχει μπλοκαριστεί σωστά"
     },
     "assistant_preview_end": {
         "message": "Έξοδος προεπισκόπησης"
