--- a/locales/be/messages.json
+++ b/locales/be/messages.json
@@ -1,5 +1,4 @@
 {
-    "settings_position_save": "Сайты",
     "settings_position_save_all": "На ўсіх",
     "settings_position_save_this": "Толькі на гэтым",
     "assistant_select_element_start": "Пачаць",
@@ -13,14 +12,8 @@
     "menu_block_ad_on_site": {
         "message": "Заблакаваць рэкламу на сайце"
     },
-    "menu_report_abuse": {
-        "message": "Паскардзіцца на сайт"
-    },
     "menu_site_report": {
         "message": "Справаздача пра бяспеку сайта"
-    },
-    "menu_settings": {
-        "message": "Наладзіць памочнік"
     },
     "menu_wot_reputation_indicator": {
         "message": "Індыкатар рэпутацыі сайта"
@@ -28,23 +21,8 @@
     "menu_wot_reputation_confidence_level": {
         "message": "Узровень верагоднасці рэпутацыі"
     },
-    "assistant_select_element": {
-        "message": "Блакаванне элемента"
-    },
-    "assistant_select_element_ext": {
-        "message": "Абярыце на старонцы элемент, які трэба заблакаваць"
-    },
     "assistant_select_element_cancel": {
-        "message": "Скасаванне"
-    },
-    "assistant_block_element": {
-        "message": "Блакаванне элемента"
-    },
-    "assistant_block_element_explain": {
-        "message": "Наладзьце правіла блакавання элемента"
-    },
-    "assistant_slider_explain": {
-        "message": "Перасоўвайце бегунок, каб змяніць памер блока, для якога будзе дзейнічаць правіла:"
+        "message": "Скасаваць"
     },
     "assistant_extended_settings": {
         "message": "Пашыраныя налады"
@@ -55,9 +33,6 @@
     "assistant_block_by_reference": {
         "message": "Блакаваць па спасылцы"
     },
-    "assistant_block_similar": {
-        "message": "Блакаваць падобныя"
-    },
     "assistant_another_element": {
         "message": "Абраць іншы элемент"
     },
@@ -65,19 +40,7 @@
         "message": "Перадпрагляд"
     },
     "assistant_block": {
-        "message": "Заблакаваць"
-    },
-    "assistant_settings": {
-        "message": "Налада памочніка"
-    },
-    "assistant_preview_header": {
-        "message": "Блакаванне элемента - перадпрагляд"
-    },
-    "assistant_preview_header_info": {
-        "message": "Пераканаецеся, што элемент заблакаваны як задумана"
-    },
-    "assistant_preview_end": {
-        "message": "Скончыць перадпрагляд"
+        "message": "Заблакіраваць"
     },
     "wot_unknown_description": {
         "message": "Рэпутацыя не вызначана"
@@ -91,26 +54,14 @@
     "wot_unsatisfactory_description": {
         "message": "У сайта нездавальняльная рэпутацыя па дадзеных $1"
     },
-    "wot_good_description": {
-        "message": "У сайта добрая рэпутацыя па дадзеных $1"
-    },
     "wot_excellent_description": {
         "message": "У сайта выдатная рэпутацыя па дадзеных $1"
     },
     "settings_choose_size_and_position": {
         "message": "Наладзьце памер і становішча памочніка AdGuard"
     },
-    "settings_icon_size": {
-        "message": "Памер іконкі:"
-    },
-    "settings_small": {
-        "message": "Маленькая"
-    },
     "settings_big": {
         "message": "Вялікая"
-    },
-    "settings_position": {
-        "message": "Месцаванне:"
     },
     "settings_left_top": {
         "message": "Уверсе злева"
@@ -126,8 +77,5 @@
     },
     "settings_cancel": {
         "message": "Скасаваць"
-    },
-    "settings_save": {
-        "message": "Захаваць налады"
     }
 }
