--- a/locales/es/messages.json
+++ b/locales/es/messages.json
@@ -29,22 +29,22 @@
         "message": "Nivel de confianza de reputación"
     },
     "assistant_select_element": {
-        "message": "Bloqueo de elementos"
+        "message": "Bloquear un elemento"
     },
     "assistant_select_element_ext": {
-        "message": "Elige un elemento en la página para bloquear"
+        "message": "Haz clic en un elemento que deseas bloquear. AdGuard creará una regla de usuario para él"
     },
     "assistant_select_element_cancel": {
         "message": "Cancelar"
     },
     "assistant_block_element": {
-        "message": "Bloqueo de elementos"
+        "message": "Bloquear un elemento"
     },
     "assistant_block_element_explain": {
-        "message": "Ajustar la regla de bloqueo del elemento"
+        "message": "Crea una regla de bloqueo de elementos"
     },
     "assistant_slider_explain": {
-        "message": "Mueve el control deslizante para cambiar el tamaño del marco para el que funcionará la nueva regla:"
+        "message": "Mueve el control deslizante para ajustar el tamaño del marco"
     },
     "assistant_extended_settings": {
         "message": "Configuración avanzada"
@@ -71,10 +71,10 @@
         "message": "Configuración del asistente"
     },
     "assistant_preview_header": {
-        "message": "Bloqueo de elementos - vista previa"
+        "message": "Vista previa del elemento bloqueado"
     },
     "assistant_preview_header_info": {
-        "message": "Asegúrate de que el elemento esté bloqueado como se deseaba"
+        "message": "Verifica si el elemento está bloqueado correctamente"
     },
     "assistant_preview_end": {
         "message": "Salir de vista previa"
