--- a/locales/pt/messages.json
+++ b/locales/pt/messages.json
@@ -29,22 +29,22 @@
         "message": "Nível de confiança de reputação"
     },
     "assistant_select_element": {
-        "message": "Bloqueio de elemento"
+        "message": "Bloquear elemento"
     },
     "assistant_select_element_ext": {
-        "message": "Escolha um elemento na página para bloquear"
+        "message": "Clique em um elemento que você deseja bloquear. O AdGuard criará uma regra de usuário para ele"
     },
     "assistant_select_element_cancel": {
         "message": "Cancelar"
     },
     "assistant_block_element": {
-        "message": "Bloqueio de elemento"
+        "message": "Bloquear elemento"
     },
     "assistant_block_element_explain": {
-        "message": "Ajustar a regra de bloqueio de elemento"
+        "message": "Criar uma regra de bloqueio do elemento"
     },
     "assistant_slider_explain": {
-        "message": "Mova o controle deslizante para alterar o tamanho do quadro para o qual a nova regra funcionará:"
+        "message": "Mova o controle deslizante para ajustar o tamanho da moldura"
     },
     "assistant_extended_settings": {
         "message": "Configurações avançadas"
@@ -71,10 +71,10 @@
         "message": "Configurações do assistente"
     },
     "assistant_preview_header": {
-        "message": "Bloqueio de elemento - pré-visualização"
+        "message": "Pré-visualização do elemento bloqueado"
     },
     "assistant_preview_header_info": {
-        "message": "Certifique-se de que o elemento esteja bloqueado como desejado"
+        "message": "Verifique se o elemento está corretamente bloqueado"
     },
     "assistant_preview_end": {
         "message": "Sair da pré-visualização"
